--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,8 @@
   margin-bottom: 10px;
   position: absolute;
   bottom: 10px;
-  left: 30%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .navCont {
@@ -56,7 +57,7 @@
   align-items: center;
 }
 
-.navLogin {
+.navLoginLogout {
   position: absolute;
   right: 0;
   margin-right: 20px
@@ -66,6 +67,11 @@
 .navMyStats,
 .navSettings {
   margin: 20px;
+}
+
+.goToRegister {
+  margin: 0 auto;
+  display: block;
 }
 
 body {
