--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,13 @@
   margin-top: 70px;
 }
 
+@font-face {
+  font-family: 'LuckiestGuy';
+  font-style: normal;
+  font-weight: 100;
+  src: url("LuckiestGuy-Regular.ttf") format('truetype');
+}
+
 .mainPageCont {
   display: grid;
   width: 75%;
@@ -18,6 +25,10 @@
   gap: 20px;
   margin-top: 30px;
   margin-bottom: 40px
+}
+
+.gameModeTitle {
+  font-family: 'LuckiestGuy';
 }
 
 .gameModeCont {
@@ -32,7 +43,7 @@
 }
 
 .gameModeCont p {
-  margin: 10px
+  margin: 10px;
 }
 
 .gameModeCont button {
@@ -55,6 +66,8 @@
   height: 70px;
   left: 0;
   align-items: center;
+  overflow-x: auto;
+  z-index: 1000;
 }
 
 .navLoginLogout {
@@ -63,10 +76,16 @@
   margin-right: 20px
 }
 
+.navTitle {
+  font-family: 'LuckiestGuy';
+  margin-top: 7px;
+  margin-right: 20px
+}
+
 .navHistory,
 .navMyStats,
 .navSettings {
-  margin: 20px;
+  margin: 0px 20px;
 }
 
 .goToRegister {
@@ -90,7 +109,53 @@ body {
   background-image: linear-gradient(to bottom right, #18A5A7, #BFFFC7);
 }
 
+.formContainerLogin {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  background-color: #263864;
+  width: 500px;
+  border-radius: 25px;
+}
 
+.logInLabel,
+.logInTextInput {
+  display: block;
+  margin: 10px;
+  padding: 0px;
+
+}
+
+.logInTextInput {
+  font-size: large;
+  border-radius: 10px;
+  margin: auto;
+  padding: 5px;
+}
+
+.logInLabel {
+  font-family: "LuckiestGuy";
+  font-size: 35px;
+}
+
+.needAccount {
+  display: inline-block;
+  margin-right: 1px;
+  padding: 0px;
+}
+
+.logInBtn {
+  margin-bottom: 20px
+}
+
+.fromLoginToRegister button {
+  background-color: transparent;
+  display: inline-block;
+  color: #033495;
+  text-decoration: underline;
+  margin-left: 5px;
+  padding: 0px;
+}
 
 .logo {
   height: 4em;
