--- a/client/src/App.css
+++ b/client/src/App.css
@@ -236,6 +236,43 @@ body {
   color: #888;
 }
 
+.questionCont {
+  background-color: #D9D9D9;
+  margin: 30px;
+  padding: 30px;
+  border-radius: 25px
+}
+
+.QAndACont {
+  display: flex;
+  flex-direction: column;
+  background-color: #263864;
+  margin-top: 30px;
+  border-radius: 25px
+}
+
+.answerCont {
+  display: block;
+  background-color: #D9D9D9;
+  margin: 30px;
+  border-radius: 25px
+}
+
+.answerIndex,
+.answerText {
+  display: inline-block;
+  margin: 20px;
+
+}
+
+.answerIndex {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background-color: #263864;
+  color: #AEE4FF
+}
+
 .footer {
   position: fixed;
   bottom: 0;
