--- a/client/src/App.css
+++ b/client/src/App.css
@@ -267,29 +267,34 @@ body {
   background-color: #D9D9D9;
   margin: 30px;
   padding: 30px;
-  border-radius: 25px
+  border-radius: 25px;
+  color: #263864;
+  font-weight: bold;
 }
 
 .QAndACont {
   display: flex;
   flex-direction: column;
   background-color: #263864;
-  margin-top: 30px;
-  border-radius: 25px
+  margin-top: 90px;
+  border-radius: 25px;
+  width: 850px;
 }
 
 .answerCont {
-  display: block;
+  display: flex;
+  flex-direction: row;
   background-color: #D9D9D9;
   margin: 30px;
-  border-radius: 25px
+  border-radius: 25px;
+  height: 60px;
 }
 
 .answerIndex,
 .answerText {
   display: inline-block;
-  margin: 20px;
-
+  margin: auto 20px;
+  color: #263864;
 }
 
 .answerIndex {
@@ -297,7 +302,14 @@ body {
   width: 35px;
   border-radius: 50%;
   background-color: #263864;
-  color: #AEE4FF
+  color: #AEE4FF;
+  padding: auto;
+  align-items: center;
+  vertical-align: middle;
+}
+
+.answerIndexText {
+  margin-top: 15%;
 }
 
 .footer {
