--- a/client/src/App.css
+++ b/client/src/App.css
@@ -143,7 +143,10 @@ body {
 
 .formContainerLogin,
 .formContainerRegister,
-.optionsContainer {
+.optionsContainer,
+.profileFormContainer,
+.profileCont,
+.pwdFormContainer {
   display: flex;
   flex-direction: column;
   margin-top: 100px;
@@ -152,8 +155,101 @@ body {
   border-radius: 25px;
 }
 
+.profileFormContainer,
+.pwdFormContainer {
+  margin-top: 30px;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+
+.profileFormContainer button,
+.pwdFormContainer button {
+  width: 200px;
+  display: inline-block;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.profileEditLabel,
+.editTextInput,
+.editDateInput {
+  display: block;
+  margin: auto;
+}
+
+.editTextInput,
+.editDateInput {
+  width: 300px;
+  border-radius: 25px;
+  padding: 10px;
+  font-size: medium;
+}
+
+.profileEditLabel {
+  color: white;
+  font-family: "LuckiestGuy";
+  font-size: 30px;
+  margin: 20px;
+
+}
+
+.profileData {
+  color: white;
+}
+
+.profileInitials {
+  font-size: 60px;
+  font-family: "LuckiestGuy";
+  padding: 5px;
+}
+
+.profileImgCont {
+  background-color: #AEE4FF;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  margin: auto;
+  margin-top: 20px;
+  align-items: center;
+  vertical-align: middle;
+}
+
+.profileThemeDivider {
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: rgb(174, 228, 255, 0.8);
+  width: 500px;
+}
+
+.profileTitle {
+  color: white;
+}
+
 .optionsContainer {
   padding: 20px;
+}
+
+.btnContProfile button {
+  margin: 10px;
+}
+
+.dangerBtn {
+  background-color: #eb3452;
+}
+
+.dangerZone {
+  margin-top: 100px;
+  background-color: #eb3452;
+  width: 500px;
+  border-radius: 25px;
+  padding: 20px;
+  color: black;
+}
+
+.dangerZone button {
+  width: 200px;
+  margin: 20px;
 }
 
 .difficultyDrop,
