--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,7 +43,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  cursor: pointer;
+  cursor: url("QQ_cursor.png"), auto;
   transition: border-color 0.25s;
 }
 
