--- a/client/src/App.css
+++ b/client/src/App.css
@@ -511,7 +511,6 @@ body {
 .QAndACont {
   display: flex;
   flex-direction: column;
-  margin-top: 5%;
   border-radius: 25px;
   width: 850px;
 }
@@ -593,4 +592,22 @@ body {
 
 .underConstImg {
   transform: scale(0.7)
+}
+
+.topMargin {
+  margin-top: 5%;
+  height: 20px;
+}
+
+.timeBarCont {
+  height: 10px;
+  width: 800px;
+  display: block;
+  padding-left: 25px;
+}
+
+.timeBar {
+  height: 100%;
+  background-color: #5ADD87;
+  transition: width 0.1s linear
 }
