--- a/client/src/App.css
+++ b/client/src/App.css
@@ -646,18 +646,46 @@ body {
 }
 
 .top5Global {
-  display: flex;
-  flex-direction: row;
+  display: grid;
   background-color: #D9D9D9;
   margin: 10px;
   border-radius: 25px;
   height: 40px;
   align-items: center;
-  padding-left: 20px;
+  padding: 0 20px;
+  grid-template-columns: 35% 53% 12%;
 }
 
-.top3Global p {}
 
 .categoryBtn {
   margin: 5px;
+}
+
+.categoryCardCont {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 5px;
+  width: 1000px;
+}
+
+.leaderboardContCard {
+  margin: 0px 10px 30px;
+  padding: 20px;
+  width: 250;
+  border-radius: 25px;
+  display: block;
+  align-content: center;
+}
+
+.top3 {
+  font-size: larger;
+}
+
+.top5GlobalC1,
+.top5GlobalC2 {
+  text-align: left;
+}
+
+.top5GlobalC3 {
+  text-align: right;
 }
