--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1019,6 +1019,7 @@ body {
   width: 800px;
   border-radius: 25px;
   margin-top: 30px;
+  padding: 20px;
 }
 
 .statsGrid1,
@@ -1028,4 +1029,18 @@ body {
   border-radius: 25px;
   padding: 20px;
   align-content: center;
+  grid-template-rows: auto auto auto;
+  padding-bottom: 30px;
+}
+
+.statsGrid1>div {
+  margin: 8px 0;
+}
+
+.row2 {
+  height: 20px;
+}
+
+.LVLTitleSpacer {
+  margin-top: 10px;
 }
